Fix #351 Unnecessary line breaks in search results

--- a/static/search.less
+++ b/static/search.less
@@ -84,7 +84,7 @@
 				a{
 					color: @link-color;
 					padding-bottom:0;
-					display: inline-block;
+					display: inline;
 					width: 100%;
 					&:hover {
 						text-decoration: none;
